--- a/friends/config.yml
+++ b/friends/config.yml
@@ -1,17 +1,15 @@
 backend:
   name: git-gateway
   branch: main
-
 publish_mode: editorial_workflow
+logo_url: "/assets/cms-logo.svg"
 locale: "ru"
-
-media_folder: "assets/friends"
-public_folder: "/assets/friends"
-
+media_folder: "assets/uploads"
+public_folder: "/assets/uploads"
 collections:
   - name: "submissions"
     label: "Мои воспоминания"
-    description: "Добавь свою историю. Она появится на сайте после одобрения."
+    description: "Добавь историю. Админ одобрит — и она появится на сайте."
     format: "json"
     extension: "json"
     editor: { preview: false }
@@ -34,4 +32,9 @@ collections:
                 widget: "list"
                 required: false
                 field: {label: "Файл", name: "image", widget: "image"}
-              - {label: "Одобрено?", name: "approved", widget: "boolean", default: false, hint: "Эту галочку ставит админ", required: false}
+              - label: "Видео (mp4/webm или YouTube)"
+                name: "videos"
+                widget: "list"
+                required: false
+                field: {label: "Видео", name: "video", widget: "file"}
+              - {label: "Одобрено? (ставит админ)", name: "approved", widget: "boolean", default: false, required: false}
