--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,15 @@
 backend:
+  # Вариант А — через Netlify Identity + Git Gateway (проще всего)
   name: git-gateway
   branch: main
+
 publish_mode: editorial_workflow
-logo_url: "/assets/cms-logo.svg"
 locale: "ru"
+
+# Куда класть фото/видео
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
+
 collections:
   - name: "stories"
     label: "Истории (публичные)"
@@ -22,22 +26,26 @@ collections:
             widget: "list"
             summary: "{{fields.title}} — {{fields.date}}"
             fields:
-              - {label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false}
-              - {label: "Заголовок", name: "title", widget: "string"}
-              - {label: "Текст", name: "text", widget: "text"}
-              - {label: "Теги", name: "tags", widget: "list", required: false}
+              - { label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false }
+              - { label: "Заголовок", name: "title", widget: "string" }
+              - { label: "Текст", name: "text", widget: "text" }
+              - { label: "Теги", name: "tags", widget: "list", required: false }
               - label: "Картинки"
                 name: "images"
                 widget: "list"
                 required: false
-                field: {label: "Файл", name: "image", widget: "image"}
-              - label: "Видео (mp4/webm или YouTube)"
+                field: { label: "Файл", name: "image", widget: "image" }
+              - label: "Видео (mp4/webm или YouTube-ссылка)"
                 name: "videos"
                 widget: "list"
                 required: false
-                field: {label: "Видео", name: "video", widget: "file"}
-              - {label: "Настроение", name: "mood", widget: "string", required: false}
-              - {label: "Автор (опционально)", name: "author", widget: "string", required: false}
+                field:
+                  label: "Видео"
+                  name: "video"
+                  widget: "file"
+              - { label: "Настроение", name: "mood", widget: "string", required: false }
+              - { label: "Автор (опционально)", name: "author", widget: "string", required: false }
+
   - name: "friends"
     label: "Друзья"
     format: "json"
@@ -53,12 +61,13 @@ collections:
             widget: "list"
             summary: "{{fields.name}} {{fields.nickname}}"
             fields:
-              - {label: "Имя", name: "name", widget: "string"}
-              - {label: "Ник", name: "nickname", widget: "string", required: false}
-              - {label: "Цитата", name: "quote", widget: "string", required: false}
-              - {label: "Память/био", name: "memory", widget: "text", required: false}
-              - {label: "Аватар", name: "avatar", widget: "image", required: false}
-              - {label: "Ссылка", name: "link", widget: "string", required: false}
+              - { label: "Имя", name: "name", widget: "string" }
+              - { label: "Ник", name: "nickname", widget: "string", required: false }
+              - { label: "Цитата", name: "quote", widget: "string", required: false }
+              - { label: "Память/био", name: "memory", widget: "text", required: false }
+              - { label: "Аватар", name: "avatar", widget: "image", required: false }
+              - { label: "Ссылка", name: "link", widget: "string", required: false }
+
   - name: "submissions"
     label: "Заявки от друзей (модерация)"
     format: "json"
@@ -74,19 +83,19 @@ collections:
             widget: "list"
             summary: "{{fields.title}} — {{fields.author}}"
             fields:
-              - {label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false}
-              - {label: "Автор", name: "author", widget: "string"}
-              - {label: "Заголовок", name: "title", widget: "string"}
-              - {label: "Текст", name: "text", widget: "text"}
-              - {label: "Теги", name: "tags", widget: "list", required: false}
+              - { label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false }
+              - { label: "Автор", name: "author", widget: "string" }
+              - { label: "Заголовок", name: "title", widget: "string" }
+              - { label: "Текст", name: "text", widget: "text" }
+              - { label: "Теги", name: "tags", widget: "list", required: false }
               - label: "Картинки"
                 name: "images"
                 widget: "list"
                 required: false
-                field: {label: "Файл", name: "image", widget: "image"}
+                field: { label: "Файл", name: "image", widget: "image" }
               - label: "Видео (mp4/webm или YouTube)"
                 name: "videos"
                 widget: "list"
                 required: false
-                field: {label: "Видео", name: "video", widget: "file"}
-              - {label: "Одобрено?", name: "approved", widget: "boolean", default: false}
+                field: { label: "Видео", name: "video", widget: "file" }
+              - { label: "Одобрено?", name: "approved", widget: "boolean", default: false }
