--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: misha213123/life        # твой репозиторий
   branch: main
+  auth_type: implicit
+  app_id: YOUR_GITHUB_OAUTH_CLIENT_ID   # <-- ВСТАВЬ Client ID из GitHub OAuth App
 
 publish_mode: editorial_workflow
 locale: "ru"
@@ -19,27 +22,17 @@ collections:
         label: "Лента историй"
         name: "stories_file"
         fields:
-          - label: "Истории"
-            name: "stories"
-            widget: "list"
-            summary: "{{fields.title}} — {{fields.date}}"
-            fields:
-              - { label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false }
-              - { label: "Заголовок", name: "title", widget: "string" }
-              - { label: "Текст", name: "text", widget: "text" }
-              - { label: "Теги", name: "tags", widget: "list", required: false }
-              - label: "Картинки"
-                name: "images"
-                widget: "list"
-                required: false
-                field: { label: "Файл", name: "image", widget: "image" }
-              - label: "Видео (mp4/webm или YouTube-ссылка)"
-                name: "videos"
-                widget: "list"
-                required: false
-                field: { label: "Видео", name: "video", widget: "file" }
-              - { label: "Настроение", name: "mood", widget: "string", required: false }
-              - { label: "Автор (опционально)", name: "author", widget: "string", required: false }
+          - { label: "Истории", name: "stories", widget: "list", summary: "{{fields.title}} — {{fields.date}}",
+              fields: [
+                {label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false},
+                {label: "Заголовок", name: "title", widget: "string"},
+                {label: "Текст", name: "text", widget: "text"},
+                {label: "Теги", name: "tags", widget: "list", required: false},
+                {label: "Картинки", name: "images", widget: "list", required: false, field: {label: "Файл", name: "image", widget: "image"}},
+                {label: "Видео (mp4/webm или YouTube)", name: "videos", widget: "list", required: false, field: {label: "Видео", name: "video", widget: "file"}},
+                {label: "Настроение", name: "mood", widget: "string", required: false},
+                {label: "Автор", name: "author", widget: "string", required: false}
+              ] }
 
   - name: "friends"
     label: "Друзья"
@@ -51,17 +44,15 @@ collections:
         label: "Список друзей"
         name: "friends_file"
         fields:
-          - label: "Друзья"
-            name: "friends"
-            widget: "list"
-            summary: "{{fields.name}} {{fields.nickname}}"
-            fields:
-              - { label: "Имя", name: "name", widget: "string" }
-              - { label: "Ник", name: "nickname", widget: "string", required: false }
-              - { label: "Цитата", name: "quote", widget: "string", required: false }
-              - { label: "Память/био", name: "memory", widget: "text", required: false }
-              - { label: "Аватар", name: "avatar", widget: "image", required: false }
-              - { label: "Ссылка", name: "link", widget: "string", required: false }
+          - { label: "Друзья", name: "friends", widget: "list", summary: "{{fields.name}} {{fields.nickname}}",
+              fields: [
+                {label: "Имя", name: "name", widget: "string"},
+                {label: "Ник", name: "nickname", widget: "string", required: false},
+                {label: "Цитата", name: "quote", widget: "string", required: false},
+                {label: "Память/био", name: "memory", widget: "text", required: false},
+                {label: "Аватар", name: "avatar", widget: "image", required: false},
+                {label: "Ссылка", name: "link", widget: "string", required: false}
+              ] }
 
   - name: "submissions"
     label: "Заявки от друзей (модерация)"
@@ -73,24 +64,14 @@ collections:
         label: "Заявки"
         name: "submissions_file"
         fields:
-          - label: "Заявки"
-            name: "submissions"
-            widget: "list"
-            summary: "{{fields.title}} — {{fields.author}}"
-            fields:
-              - { label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false }
-              - { label: "Автор", name: "author", widget: "string" }
-              - { label: "Заголовок", name: "title", widget: "string" }
-              - { label: "Текст", name: "text", widget: "text" }
-              - { label: "Теги", name: "tags", widget: "list", required: false }
-              - label: "Картинки"
-                name: "images"
-                widget: "list"
-                required: false
-                field: { label: "Файл", name: "image", widget: "image" }
-              - label: "Видео (mp4/webm или YouTube)"
-                name: "videos"
-                widget: "list"
-                required: false
-                field: { label: "Видео", name: "video", widget: "file" }
-              - { label: "Одобрено?", name: "approved", widget: "boolean", default: false }
+          - { label: "Заявки", name: "submissions", widget: "list", summary: "{{fields.title}} — {{fields.author}}",
+              fields: [
+                {label: "Дата", name: "date", widget: "datetime", format: "YYYY-MM-DD", time_format: false},
+                {label: "Автор", name: "author", widget: "string"},
+                {label: "Заголовок", name: "title", widget: "string"},
+                {label: "Текст", name: "text", widget: "text"},
+                {label: "Теги", name: "tags", widget: "list", required: false},
+                {label: "Картинки", name: "images", widget: "list", required: false, field: {label: "Файл", name: "image", widget: "image"}},
+                {label: "Видео (mp4/webm или YouTube)", name: "videos", widget: "list", required: false, field: {label: "Видео", name: "video", widget: "file"}},
+                {label: "Одобрено?", name: "approved", widget: "boolean", default: false}
+              ] }
